--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0 p-0" type="button"
                     data-toggle="collapse" data-target="#navbar8">
                 <p class="navbar-brand text-primary mb-0">
-                    <i class="fa d-inline fa-lg fa-stop-circle"></i> BRAND </p>
+                    <i class="fa d-inline fa-lg fa-stop-circle"></i> ROBOT </p>
             </button>
             <div class="collapse navbar-collapse" id="navbar8">
                 <ul class="navbar-nav mr-auto">
@@ -49,10 +49,7 @@
                 </div>
                 <div class="p-5 col-lg-7 d-flex flex-column justify-content-center">
                     <h3 class="display-4 mb-3">c'est pas sorcier - les robots</h3>
-                    <p class="lead mb-0">Teems with vapour around me, and the meridian sun strikes the upper surface of
-                        the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary,
-                        I throw myself down among the tall grass by the trickling stream; and, as I lie close to the
-                        earth.</p>
+                    <p class="lead mb-0">voici un c'est pas sorcier sur les robots ;-) bon visonage !</p>
                 </div>
             </div>
         </div>
@@ -61,21 +58,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h1 class="text-in-white">A wonderful serenity</h1>
+                    <h1 class="text-in-white">VIVE LES ROBOTS !</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 p-3 text-in-white">
-                    <p>When I hear the buzz of the little world among the stalks, and grow familiar with the countless
-                        indescribable forms of the insects and flies, then I feel the presence of the Almighty, who
-                        formed us in his own image, and the breath of that universal love which bears and sustains us.
+                    <p>Les robots sont des milliers (voir des millions) sur Terre. Ils nous servent à plein de choses :
+                        ils font la cuisine, 
+                        ils peuvent tenir une convertation avec quelqu'un, 
+                        ils font le ménage, 
+                        ils font du sport, ...
                     </p>
                 </div>
                 <div class="col-md-6 p-3 text-in-white">
-                    <p>And then, my friend, when darkness overspreads my eyes, and heaven and earth seem to dwell in my
-                        soul and absorb its power, like the form of a beloved mistress, then I often think with longing,
-                        Oh, would I could describe these conceptions, could impress upon paper all that is living so
-                        full.</p>
+                    <p>En 2050, je pense que le noumble de robots sera 10 fois plus grand et que presque tout le mond aura un robot chez soi.
+                        les robots auront une place plus importante dans notre vie. Les robot vont remplacer des humains pour des traveaux pénibles (ramasser les poubelles, éplucher des légumes, ...).
+                    </p>
                 </div>
             </div>
         </div>
@@ -84,17 +82,17 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/Nao_Robot.jpg"> </div>
-                <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/cover-bubble-dark.svg">
+                <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/robot image.jpg">
                 </div>
-                <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/cover-moon.svg"> </div>
-                <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/cover-bubble-light.svg">
+                <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/Nao_Robot.jpg"> </div>
+                <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/robot image.webp">
                 </div>
-                <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/cover-bubble-dark.svg">
+                <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/robot image.jpg">
                 </div>
-                <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/cover-moon.svg"> </div>
-                <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/cover-bubble-light.svg">
+                <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/Nao_Robot.jpg"> </div>
+                <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/robot image.webp">
                 </div>
-                <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/cover-moon.svg"> </div>
+                <div class="col-6 col-md-3 p-0"> <img class="img-fluid d-block" src="images/Nao_Robot.jpg"> </div>
             </div>
         </div>
     </div>
@@ -105,31 +103,31 @@
                     <div class="carousel slide" data-ride="carousel" id="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active"> <img class="d-block img-fluid w-100"
-                                     src="images/cover-bubble-dark.svg">
+                                     src="images/Nao_Robot.jpg">
                                 <div class="carousel-caption">
-                                    <h5 class="m-0">Carousel</h5>
-                                    <p>with controls</p>
+                                    <h5 class="m-0">Nao</h5>
+                                    <p>Nao est un robot humanoïde.</p>
                                 </div>
                             </div>
                             <div class="carousel-item"> <img class="d-block img-fluid w-100"
-                                     src="images/cover-bubble-light.svg">
+                                     src="images/robot qui fait le ménage.jpg">
                                 <div class="carousel-caption">
-                                    <h5 class="m-0">Carousel</h5>
-                                    <p>with controls</p>
+                                    <h5 class="m-0" >ménage</h5>
+                                    <p class="text-in-black">voici un robot qui fait le ménage.</p>
                                 </div>
                             </div>
                             <div class="carousel-item"> <img class="d-block img-fluid w-100"
-                                     src="images/cover-moon.svg">
+                                     src="images/robocup-robot.jpg">
                                 <div class="carousel-caption">
-                                    <h5 class="m-0">Carousel</h5>
-                                    <p>with controls</p>
+                                    <h5 class="m-0 text-in-black" >foot</h5>
+                                    <p class="text-in-black">même les robots font du foot !</p>
                                 </div>
                             </div>
                             <div class="carousel-item"> <img class="d-block img-fluid w-100"
                                      src="images/robot.jpg">
                                 <div class="carousel-caption">
-                                    <h5 class="m-0">4 slides !</h5>
-                                    <p>grâce au HTML !</p>
+                                    <h5 class="m-0 text-in-black" >robot</h5>
+                                    <p class="text-in-black">alors, vive les robots !</p>
                                 </div>
                             </div>
                          </div>
@@ -142,65 +140,12 @@
             </div>
         </div>
     </div>
-    <div class="py-5 text-center">
-        <div class="container">
-            <div class="row">
-                <div class="mx-auto col-md-12">
-                    <h1 class="mb-3">Meet&nbsp;the team</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-6 p-4 "> <img class="img-fluid d-block mb-3 mx-auto rounded-circle"
-                         src="images/img-placeholder-1.svg" width="100" alt="Card image cap">
-                    <h4> <b>Johann</b> </h4>
-                    <p>CEO and founder</p>
-                    <p class="mb-0"> <i>"I throw myself down among the tall grass by the trickling"</i> </p>
-                </div>
-                <div class="col-lg-3 col-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto rounded-circle"
-                         src="images/img-placeholder-2.svg" width="100" alt="Card image cap">
-                    <h4> <b>Gregory</b> </h4>
-                    <p>Co-founder</p>
-                    <p class="mb-0"> <i>"As I lie close to the earth, a thousand unknown plants"</i> </p>
-                </div>
-                <div class="col-lg-3 col-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto rounded-circle"
-                         src="images/img-placeholder-3.svg" width="100">
-                    <h4> <b>James</b> </h4>
-                    <p>CFO</p>
-                    <p class="mb-0"> <i>"Then, my friend, when darkness overspreads my eyes"</i> </p>
-                </div>
-                <div class="col-lg-3 col-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto rounded-circle"
-                         src="images/img-placeholder-4.svg" width="100">
-                    <h4> <b>Amadeus</b> </h4>
-                    <p>CTO</p>
-                    <p class="mb-0"> <i>"Heaven and earth seem to dwell in my soul"</i> </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="py-5 text-center" id="parallax-section">
-        <div class="container">
-            <div class="row">
-                <div class="bg-white p-4 col-10 mx-auto mx-md-0 col-lg-6">
-                    <h1>I am so happy</h1>
-                    <p class="mb-4">A wonderful serenity has taken possession of my entire soul, like these sweet
-                        mornings of spring which I enjoy with my whole heart. I am alone.</p>
-                    <form class="form-inline d-flex justify-content-center">
-                        <div class="input-group"> <input type="email" class="form-control" placeholder="Your email"
-                                   id="form6">
-                            <div class="input-group-append"> <button class="btn btn-primary"
-                                        type="button">Subscribe</button> </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="py-5 text-white" id="footer-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center align-self-center p-4">
-                    <p class="mb-5"> <strong>Pingendo Inc.</strong> <br>795 Folsom Ave, Suite 600 <br>San Francisco, CA
-                        94107 <br> <abbr title="Phone">P:</abbr> (123) 456-7890 </p>
+                    <p class="mb-5"> <strong>science 14</strong> <br>14 b, rue de la science<br>Bruxelles, BEL
+                        1040 <br>
                     <div class="row">
                         <div class="col-md-12 d-flex align-items-center justify-content-around"> <a href="#">
                                 <i class="d-block fa fa-facebook-official text-light fa-lg mx-2"></i>
@@ -218,7 +163,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 p-0">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40329.094458239444!2d4.340340506465986!3d50.820634709058034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c49d464cf871%3A0x6ad2d087c927be75!2sIxelles!5e0!3m2!1sfr!2sbe!4v1594047204532!5m2!1sfr!2sbe" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2519.376481042531!2d4.369194716108842!3d50.84271227953138!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c49ca51a0e99%3A0xaed6adb7b50c5531!2sRue%20de%20la%20Science%2014%2C%201040%20Bruxelles!5e0!3m2!1sfr!2sbe!4v1594212012701!5m2!1sfr!2sbe" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
         </div>
