--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </p>
                 </div>
                 <div class="col-md-6 p-3 text-in-white">
-                    <p>En 2050, je pense que le noumble de robots sera 10 fois plus grand et que presque tout le mond aura un robot chez soi.
+                    <p>En 2050, je pense que le nombre de robots sera 10 fois plus grand et que presque tout le mond aura un robot chez soi.
                         les robots auront une place plus importante dans notre vie. Les robot vont remplacer des humains pour des traveaux pénibles (ramasser les poubelles, éplucher des légumes, ...).
                     </p>
                 </div>
